<resources>
    <string name="frog_development" translatable="false">FROG DEVELOPMENT</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9262384952442366/1210248138</string>
    <string name="app_name" translatable="false">Nihon Go !</string>
    <string name="no_connection">No connection</string>
    <string name="warning_ime_title" translatable="false">ATTENTION</string>
    <string name="warning_ime_text">Japanese Keyboard required for this application.</string>
    <string name="cb_remember">Don\'t display anymore</string>
    <string name="drawer_item_word">Words</string>
    <string name="drawer_item_expression">Expressions</string>
    <string name="drawer_item_kana" translatable="false">Kana</string>
    <string name="drawer_item_review">Review</string>
    <string name="drawer_item_test">Test</string>
    <string name="drawer_item_lessons">Lessons</string>
    <string name="drawer_item_parameters">Parameters</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dialog_tags_title" translatable="false">Tags</string>
    <string name="search_word">Search for words</string>
    <string name="search_expression">Search for expressions</string>
    <string name="search_current">Searching for \"%1$s\"</string>
    <string name="dico_no_data">No data</string>
    <string name="title_activity_details">Details</string>
    <string name="details_info">Information :</string>
    <string name="details_example">Example :</string>
    <string name="details_tags">Tags : %1$s</string>
    <string name="details_ratio">Success : %1$d%%</string>
    <string name="rate_done">Rate as « %1$s »</string>
    <string name="rate_0">New</string>
    <string name="rate_1">See</string>
    <string name="rate_2">Learned</string>
    <string name="bookmark_add">Add to bookmarks</string>
    <string name="bookmark_remove">Remove from bookmarks</string>
    <string name="action_dico_favorite">Favorite</string>
    <string name="action_dico_update">Update</string>
    <string name="action_dico_delete">Delete</string>
    <string name="action_dico_favorite_only">Favorites only</string>
    <string name="action_dico_sort_letter">Sort by letter</string>
    <string name="action_dico_sort_tag">Sort by tag</string>
    <string name="action_dico_gesture">Draw</string>
    <plurals name="action_selection">
        <item quantity="one">%1$d line selected.</item>
        <item quantity="other">%1$d lines selected.</item>
    </plurals>
    <string name="delete_title">Deleting</string>
    <string name="delete_detail">You\'re going to delete the input</string>
    <plurals name="delete_confirmation">
        <item quantity="one">You\'re going to delete %1$d line</item>
        <item quantity="other">You\'re going to delete %1$d lines</item>
    </plurals>
    <string name="positive_button_continue">Continue ?</string>
    <string name="delete_done">Delete done</string>
    <string name="update_title">Updating</string>
    <string name="update_confirmation">Update this input ?</string>
    <string name="update_alert">Input \'%s\' already present, do you want to update it ?</string>
    <string name="input_textView_input">Word</string>
    <string name="input_textView_kanji" translatable="false">Kanji</string>
    <string name="input_textView_kana" translatable="false">Kana</string>
    <string name="input_textView_info">Information</string>
    <string name="input_textView_example">Example</string>
    <string name="input_textView_tags">Tags (comma separated)</string>
    <string name="input_button_validate">Validate</string>
    <string name="input_button_cancel">Cancel</string>
    <string name="input_error_empty">Input required !</string>
    <string name="input_error_fields">Check the fields</string>
    <string name="input_error_all_empty">At least one input required !</string>
    <string name="input_error_input">No japanese</string>
    <string name="input_error_japanese">Only Hiragana, Katakana and Kanji !</string>
    <string name="input_error_kana">Only Kana (Hiragana or Katakana) !</string>
    <string name="input_error_kanji">No Kanji!</string>
    <string name="input_save_OK">Data saved</string>
    <string name="input_duplicated_OK">Data duplicated</string>
    <string name="input_update_OK">Data updated</string>
    <string name="action_validate">Validate</string>
    <string name="action_cancel">Cancel</string>
    <string name="expression_input">Expression</string>
    <string name="param_test">Test\'s parameters</string>
    <string name="param_review">Review\'s parameters</string>
    <string name="param_reviewed">Reviews on japanese ?</string>
    <string name="param_only_favorite">Only Favorites ?</string>
    <string name="param_type">Type</string>
    <string name="param_type_selection">Select the type of test</string>
    <string name="param_method">Method</string>
    <string name="param_method_selection">Select the method for test</string>
    <string name="param_nb_answers">Nb answers</string>
    <string name="param_nb_answers_selection">Select the number of answers</string>
    <string-array name="param_learned">
        <item>@string/rate_0</item>
        <item>@string/rate_1</item>
        <item>@string/rate_2</item>
        <item>All</item>
    </string-array>
    <string name="param_learned_selection">Select the rate</string>
    <string name="param_sort">Sort</string>
    <string name="param_sort_selection">Select the sort order</string>
    <string name="param_quantity">Quantity</string>
    <string name="param_quantity_selection">Select the quantity</string>
    <string name="param_only_learned">Only learned ?</string>
    <string name="param_kanji_display">Display in Kanji</string>
    <string name="param_kanji_write">Write in Kanji</string>
    <string name="param_tag_title">Tag (Optional)</string>
    <string name="param_tag_selection">Select a tag</string>
    <string name="param.tags.dialog.title">Select one or more tags</string>
    <string name="param_button_start">Start</string>
    <string name="param_keep_config">Keep config ?</string>
    <string-array name="param_types">
        <item>Kanji -> Hiragana</item>
        <item>Hiragana -> Kanji</item>
        <item>Japanese -> English</item>
        <item>English -> Japanese</item>
    </string-array>
    <string-array name="param_methods">
        <item>MCQ</item>
        <item>Write</item>
    </string-array>
    <string-array name="param_sorts">
        <item>new -> old</item>
        <item>old -> new</item>
        <item>random</item>
    </string-array>
    <string-array name="param_quantities_answers" translatable="false">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="param_quantities">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>40</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>All</item>
    </string-array>
    <string name="title_activity_review">Review</string>
    <string name="review_switch_kanji">Tap to show Kanji</string>
    <string name="review_switch_kana">Tap to show Kana</string>
    <string name="review_switch_input">Tap to show English</string>
    <string name="title_activity_test" translatable="false">Tests</string>
    <string name="test_tab_selection">SELECTION</string>
    <string name="test_tab_input">INPUT</string>
    <string name="test_back_title" translatable="false">ATTENTION</string>
    <string name="test_back_message">Warning ! You\'re going to leave the test.</string>
    <string name="test_next">Next</string>
    <string name="test_info">Information</string>
    <string name="test_input_empty">No response given, continue ?</string>
    <string name="test_results_title">Results</string>
    <string name="test_results_details">Test : %1$s\nAnswer expected : %2$s\nAnswer given : %3$s</string>
    <string name="menu_search">search</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search a word</string>
    <string name="no_results">No values</string>
    <plurals name="search_results">
        <item quantity="one">%1$d result</item>
        <item quantity="other">%1$d results</item>
    </plurals>
    <string name="help_chart_description">Hiragana and Katakana</string>
    <string name="global_hiragana" translatable="false">Hiragana</string>
    <string name="global_katakana" translatable="false">Katakana</string>
    <string name="lesson_description">Free downloadable vocabulary available, based on Minna No Nihongo lessons.</string>
    <string name="lesson_no_connection_test">No connection available, only downloaded lessons are displayed.</string>
    <string name="lesson_tag">Lesson </string>
    <string name="fetching_data">Fetching data</string>
    <string name="lesson_already_present">Lesson already fetched</string>
    <string name="lesson_continue">Continue ?</string>
    <string name="lesson_download">Download</string>
    <string name="lesson_download_success">Download successful</string>
    <plurals name="action_lesson">
        <item quantity="one">%1$d lesson selected.</item>
        <item quantity="other">%1$d lessons selected.</item>
    </plurals>
    <string name="options_export">Export </string>
    <string name="options_export_success">File \'%s\' saved on folder Download.</string>
    <string name="options_export_error">Export failed</string>
    <string name="options_import">Import data</string>
    <string name="options_import_success">Import success</string>
    <string name="options_import_failed">Import failed</string>
    <string name="options_file_chooser_get_file_manager">Please install a File Manager.</string>
    <string name="options_file_chooser_prompt">Select a File to Upload</string>
    <string name="options_error_fetch_data">An error occurred while fetching data.</string>
    <string name="options_data">Data</string>
    <string name="options_erase_data_btn">Erase data</string>
    <string name="options_erase_data_confirmation">You\'re going to erase all your data, continue ?</string>
    <string name="options_erase_data_success">Erase success</string>
    <string name="options_reset_favorite_btn">Reset Favorite</string>
    <string name="options_reset_favorite_confirmation">You\'re going to reset your Favorites, continue ?</string>
    <string name="options_reset_favorite_success">Reset success</string>
    <string name="options_reset_learned_btn">Reset Learned</string>
    <string name="options_reset_learned_erase_confirmation">You\'re going to reset your Learned, continue ?</string>
    <string name="options_reset_learned_erase_success">Reset success</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help_dico_intro">Here is some help for the dico view</string>
    <string name="help_dico_one_press_description">1 press</string>
    <string name="help_dico_one_press">Press 1 time to switch between Kanji and Kana</string>
    <string name="help_dico_two_press_description">2 presses</string>
    <string name="help_dico_two_press">Press 2 times to enter detail\'s view</string>
    <string name="help_dico_press_and_hold">Press and hold to select the line</string>
    <string name="help_dico_add">Add new input</string>
    <string name="about_hiragana_link" translatable="false">About the Hiragana table : <a href="https://commons.wikimedia.org/wiki/File:Table_hiragana.jpg">Source Hiragana table</a></string>
    <string name="about_katakana_link" translatable="false">About the Katakana table : <a href="https://commons.wikimedia.org/wiki/File:Table_katakana.jpg">Source Katakana table</a></string>
    <string name="about_version">Version : %1$s</string>
</resources>