<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Frog Development 2015.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top"
              android:padding="5dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/test_param_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/test_param_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/param_type"/>

            <TextView
                android:id="@+id/test_param_type_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/param_type_selection"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_param_method"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/test_param_method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/param_method"/>

            <TextView
                android:id="@+id/test_param_method_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/param_method_selection"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_param_quantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/test_param_quantity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/param_quantity"/>

            <TextView
                android:id="@+id/test_param_quantity_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/param_quantity_selection"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_param_tag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/test_param_tag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/param_tag_title"/>

            <TextView
                android:id="@+id/test_param_tag_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/param_tag_selection"/>
        </LinearLayout>

        <Switch
            android:id="@+id/test_param_kanji"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/param_kanji_display"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:visibility="invisible"/>

    </LinearLayout>

    <Button
        android:id="@+id/test_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/param_button_start"
        android:enabled="false"/>
</LinearLayout>