<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Frog Development 2015.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_dico_sort_tag"
        android:icon="@drawable/ic_sort_by_alpha_white"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_filter_by_favorite"
        android:checkable="true"
        android:title="@string/action_dico_favorite_only"
        app:showAsAction="never"/>

</menu>