<!--
  ~ Copyright (c) Frog Development 2015.
  -->

<LinearLayout android:id="@+id/parameters_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal|top"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="fr.frogdevelopment.nihongo.options.ParametersFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="15dp"
        android:text="@string/options_data"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/options_erase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/options_erase_data_btn"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/options_reset_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/options_reset_favorite_btn"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/options_reset_learned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/options_reset_learned_btn"
        android:textColor="@android:color/black"/>

</LinearLayout>
